[package]
name = "rgym"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html[lib]
[lib]
name = "rgym"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.65"
error-stack = { version = "0.2.1", features = ["anyhow"] }
ndarray = "0.15.6"
numpy = "0.17.2"
pyo3 = { version = "0.17.2", features = ["abi3-py37", "extension-module", "multiple-pymethods"] }
