[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "rgym"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
python-source = "python"
profile ="release"

[tool.poetry]
name = "traiding_gym"
version = "0.1.0"
description = ""
authors = ["Sun Keun Choi <sunkeun.choi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
maturin = "^0.13.3"
